# datalake2

./: .gitignore  README.md  pyproject.toml
airbnb/: csv_to_datalake.py
